--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Tutorial 0b</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum similique explicabo nihil tenetur voluptatum minima facilis maiores ex sequi quis veniam eligendi, excepturi illum iusto error dolor ullam a. Nihil.</p>
+        <p>I love coding and Tutorial 00b.</p>
     </header>
 </body>
 </html>
