--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Tutorial 0b</h1>
-        <p>I love coding and Tutorial 00b.</p>
+        <p>I suck at coding. Please help me!</p>
     </header>
 </body>
 </html>
