--- a/index.html
+++ b/index.html
@@ -8,22 +8,13 @@
 <body>
     <header>
         <h1>Tutorial 0b</h1>
+
+        <h1>Size Emojis</h1>
+        <p style ="font-size; 48px">&#128512; &#128516; &#128525; &#128151;</p>
+       
         <p>Coding is hard. I hope to be more familiar
-            with coding so I can make my own website. 
-
-            <p>Choose your monster's colors:</p>
-
-<div>
-  <input type="color" id="head" name="head" value="#e66465" />
-  <label for="head">Head</label>
-</div>
-
-<div>
-  <input type="color" id="body" name="body" value="#f6b73c" />
-  <label for="body">Body</label>
-</div>
-
-        </p>
+            with coding so I can make my own website. </p>
+ 
     </header>
 </body>
 </html>
