drop down added

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 <body>
     <header>
         <h1>Tutorial 0b</h1>
-
-        <h1>Size Emojis</h1>
-        <p style ="font-size; 48px">&#128512; &#128516; &#128525; &#128151;</p>
        
         <p>Coding is hard. I hope to be more familiar
             with coding so I can make my own website. </p>
+
+            <select>
+                
+                <option value="">--Please Choose an Option--</option>
+                <option>Yes</option>
+                <option>No</option>
+                <option>Maybe So</option>
+
+            </select>
  
     </header>
 </body>
