--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             with coding so I can make my own website. </p>
 
             <select>
-                
-                <option value="">--Please Choose an Option--</option>
-                <option>Yes</option>
-                <option>No</option>
-                <option>Maybe So</option>
+
+                <option value="">--Mikes Option--</option>
+                <option>Cry</option>
+                <option>Sleep</option>
+                <option>Try Again Tomorrow</option>
 
             </select>
  
