--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
                 <option>Sleep</option>
                 <option>Try Again Tomorrow</option>
 
+                <figure role="img" aria-labelledby="fox-caption">
+                    <pre>
+                            /^._
+              ,___,--~~~~--' /'~
+              `~--~\ )___,)/'
+                  (/\\_  (/\\_
+              </pre>
+                    <figcaption id="fox-caption">
+              Fox illustration in asciiart.
+                    </figcaption>
+              </figure>
+
             </select>
  
     </header>
